# crowdchecked-claims

./: README.md
code/: README.md  pyproject.toml
code/src/crowdchecked/: data.py  trainer.py  utils.py
code/src/enriched_schema/: MNRLoss.py  MNRShuffler.py  Main.ipynb  STSDataReaderBinaryPositives.py  requirements.txt
sbert-baselines/: pyproject.toml  requirements.txt
sbert-baselines/src/semi_claim/: trainer.py  trainer_ce.py  utils.py
