[tool.poetry]
name = "semi_claim"
version = "0.1.0"
description = ""
authors = ["Momchil Hardalov <hardalov@fmi.uni-sofia.bg""]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
sentence-transformers = "^2.1.0"
transformers = "^4.12.5"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
atomic = true
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
order_by_type = true
case_sensitive = true
src_paths = ["*"]
